correction in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -6,7 +6,7 @@
 \noindent
 {\rm Edited by Editorial Committee}\\
 {\rm Executive Editor : Dr. Nandish Hanche}\\
-{\rm Published by JSS Granthamale, Mysuru - 570 004}\\[8pt]
+{\rm Published by JSS Granthamale, Mysuru 570 004}\\[8pt]
 {\rm Pages : 38 + 896}
 
 \vspace{1cm}
@@ -41,9 +41,9 @@
 \smallskip
 
 \noindent
-saMpAdane : saMpAdaka samiti,\\
+saMpAdane : saMpAdaka samiti\\
 kAyaRnivARhaka saMpAdakaru : DA. naMdiVshf haMce\\
-parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru - 570 004\\[8pt]
+parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru 570 004\\[8pt]
 puTagaLu : 38 + 896
 
 \vspace{1cm}
