--- a/nalkunudi.tex
+++ b/nalkunudi.tex
@@ -4,19 +4,19 @@
 
 \bigskip
 
-`shivapada ratanxkoVsha' atuyxpayukatxvAda amUlayx kaqti. shivadhamaR, saMsakxqqti, sidAdhxMtagaLanunx yathAvatAtxgi paricayisuva baqhatf pada BAMDAravidu. ililxruva ulelxVKagaLu nAlUkxvare sahasarx; ililxruva padaparxyoVgagaLu adara hatutx pAlu! ALavAda visAtxravAda shivadashaRnAdhayxyanakekx idu sahakAri.
+`shivapada ratanxkoVsha' atuyxpayukatxvAda amUlayx kaqti. shivadhamaR, saMsakxqqti, sidAdhxMtagaLanunx yathAvatAtxgi paricayisuva baqhatf padaBAMDAravidu. ililxruva ulelxVKagaLu nAlUkxvare sahasarx; ililxruva padaparxyoVgagaLu adara hatutx pAlu! ALavAda, visAtxravAda shivadashaRnAdhayxyanakekx idu sahakAri.
 
 \medskip
 
-I payARpatx hosa hotatxge rUpisidavaru, racisidavaru sherxVSaThx vidAvxMsaru; shAsatxrXsAhitayx keSxVtarxdalilx bahushurxtaru. shabadx avara saMpatutx; athaR avara anuBoVga, sArasavxta duDimeyadu avara tapasusx. avara bahu parisharxmada PalaviV niGaMTu. adhayxyana\-shiVlarigidu Asare. sAmAnayx sAdhakarigidu sahAyaka mAgaRdashiR.
+I payARpatx hosa hotatxge rUpisidavaru, racisidavaru sherxVSaThx vidAvxMsaru; shAsatxrXsAhitayx keSxVtarxdalilx bahushurxtaru. shabadx avara saMpatutx; athaR avara anuBoVga; sArasavxta duDimeyadu avara tapasusx. avara bahu parisharxmada PalaviV niGaMTu. adhayxyana\-shiVlarigidu Asare. sAmAnayx sAdhakarigidu sahAyaka mAgaRdashiR.
 
 \medskip
 
-parama pUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx shirxVgaLavaru dhamaR tatatxvXgaLa ciMtakaru. vidAyxrAdhakaru. sAMsakxqqtika kaloVpAsakaru. avara sAninxdhayxdalilx nUrAru sArasavxta baqhadudAyxnagaLu beLedive. sAhitayx aMbujagaLu araLive. idiVga araLidudu `shivapada ratanxkoVsha' kusuma! adaralilxruva pada-padAthaR-parimaLavu shivajAcnxnAsakatxra valayadalelxlalx haraDaleMdu hAreYsuve.
+paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx shirxVgaLavaru dhamaR, tatatxvXgaLa ciMtakaru. vidAyxrAdhakaru. sAMsakxqqtika kaloVpAsakaru. avara sAninxdhayxdalilx nUrAru sArasavxta baqhadudAyxnagaLu beLedive. sAhitayx aMbujagaLu araLive. idiVga araLidudu `shivapada ratanxkoVsha' kusuma! adaralilxruva pada-padAthaR-parimaLavu shivajAcnxnAsakatxra valayadalelxlalx haraDaleMdu hAreYsuve.
 
 \vskip 1.5cm
 
 \noindent
 di : 28-12-2019\hfill {\bf -si}\hspace{1.7cm}\,\\
 \phantom{aa}\hfill (sidedhxVshavxra sAvxmigaLu)\quad\,\\
-\phantom{a} \hfill jAcnxnayoVgAsharxma vijayapura
+\phantom{a} \hfill jAcnxnayoVgAsharxma, vijayapura
