--- a/nivedane.tex
+++ b/nivedane.tex
@@ -7,27 +7,27 @@
 \centerline{\large\bfseries 1}
 \medskip
 
-jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDu rAshiyAgirutatxde. pArxdeVshikate, dhamaR, jAti-mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDalAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaRgaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxtiyoMdu BASeyU jaMgamasavxrUpiyAgirutatxde. hAgAgi iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu sidadhxgoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
+jagatitxna yAvudeV BASeya amUlayx saMpatetxMdare sAhitayx matutx saMsakxqqti. ivugaLa mUla savxrUpavanunx tiLiyalu atayxgatayxvAda AkaraveMdare niGaMTu. oMdu BASeya sakala padasaMpatutx alilx saMgarxhagoMDirutatxde. pArxdeVshikate, dhamaR, jAti, mata hiVge halavu hinenxlegaLiMda oMdu pada aneVka rUpagaLanunx, athaRgaLanunx paDedirutatxde. niGaMTuviniMda avugaLanunx saMpUNaRvAgi ariyalu sAdhayxvilalxdidadxrU, adoMdu toVrudAriyAgirutatxde. sAdhAraNavAgi niGaMTuvinalilx athaRkekx hecucx mahatavx niVDalAgutatxde. padagaLige iruva athaRgaLu elalx kAlakUkx oMdeV bageyAgi iruvudilalx. kAlAnuguNavAgi shabadxrUpagaLu, shabAdxthaRgaLu parivataRneyanunx paDeyutitxrutatxve. I hinenxleyalilx parxtiyoMdu BASeyU jaMgamasavxrUpiyAgirutatxde. hAgAgi iMtaha jaMgamasavxrUpi BASeya padasaMpatatxnunx athaRmADikoLaLxlu kAladiMda kAlakekx hosa hosa niGaMTugaLu sidadhxgoLuLxtatxve. hosa niGaMTugaLu haLeya athaRgaLanUnx dAKalisikoMDu hosa visatxqqta athaRvanunx niVDutatxve. badalAguva deVsha, kAla, cariterxgaLige anuguNavAgi saqSiTxgoLuLxva elalx padasaMpatatxnunx tamomxLage kUDisikoMDu niGaMTugaLu rUpugoLuLxtatxve.
 
 \medskip
 
-niGaMTugaLa cariterxge hoVlisidare pAriBASika niGaMTugaLa racane ititxVcinadu. parxtiyoMdu jAcnxnakeSxVtarx athavA shAKeyalilx vishiSaTx athaRdalilx baLakegoLuLxva padagaLanunx `pAriBASika pada' eMdu kareyalAgutatxde. kananxDadalilx, BAratiVya saMsakxqqtiya hinenxle\-yalilx idanunx `tAtitxvXka' eMdu kareyabahudAgide. swlaBayxkAkxgi athavA athaRvishadategAgi keYgArike hAgU vaqtitxgaLanunx Adharisida vishiSaTx padagaLige `tAMtirxka'veMdU kale, saMsakxqqti, dhamaR itAyxdi saMgatigaLanunx kurita vishiSaTx padagaLanunx `tAtitxvXka'veMdU viMgaDisi\-koLaLxbahudu. idanunx shAsitxrXVyaveMdu kareyabahudu.
+niGaMTugaLa cariterxge hoVlisidare pAriBASika niGaMTugaLa racane ititxVcinadu. parxtiyoMdu jAcnxnakeSxVtarx athavA shAKeyalilx vishiSaTx athaRdalilx baLakegoLuLxva padagaLanunx `pAriBASika pada' eMdu kareyalAgutatxde. kananxDadalilx, BAratiVya saMsakxqqtiya hinenxle\-yalilx idanunx `tAtitxvXka' eMdu kareyabahudAgide. swlaBayxkAkxgi athavA athaRvishadategAgi keYgArike hAgU vaqtitxgaLanunx Adharisida vishiSaTx padagaLige `tAMtirxka'veMdU kale, saMsakxqqti, dhamaR itAyxdi saMgatigaLanunx kurita vishiSaTx padagaLanunx `tAtitxvXka'veMdU viMgaDisi\-koLaLxbahudu.
 
 \medskip
 
-iMdu vijAcnxna matutx keYgArikegaLige saMbaMdhisidaMte vipulavAda pAriBASika padakoVshagaLu racanegoMDive. Adare samAja, saMsakxqqtigaLa keSxVtarxkekx saMbaMdhisidaMte aSuTx saMKeyxya pAriBASika niGaMTugaLu rUpugoMDilalx. AdarU visatxqqta parikalapxneyalilx pAriBASika AkaragaLaMte toVruva loVkoVpakArakavAda shAsatxrXkaqtigaLu heVraLavAgive. udAharaNege gajashAsatxrX, hayashAsatxrX, sUpashAsatxrX, shakunashAsatxrX, sAmudirxkashAsatxrX, shilapxshAsatxrX itAyxdi. AdudariMdaleV saMsakxqqtada AlaMkArikanAda rAjasheVKaranu kavigaLanunx kAvayxkavi, shAsatxrXkavi matutx uBayakavi eMdu mUru bagegaLAgi viMgaDisutAtxne. kAvayxveMbudu sArataH anuBavaveVdayxvAdare, shAsatxrX budidhx\-gamayx. anuBava matutx AloVcanegaLu manuSayxna sahaja parxvaqtitxgaLu. aMteyeV veYdika dashaRnagaLa hAgU jeYna hAgU bwdadhx dashaRnagaLa saMbaMdhadalilx BAratiVya tatatxvXdashaRnada aneVka padakoVshagaLu racitavAgive.
+iMdu vijAcnxna matutx keYgArikegaLige saMbaMdhisidaMte vipulavAda pAriBASika padakoVshagaLu racanegoMDive. Adare samAja, saMsakxqqtigaLa keSxVtarxkekx saMbaMdhisidaMte aSuTx saMKeyxya pAriBASika niGaMTugaLu rUpugoMDilalx. AdarU visatxqqta parikalapxneyalilx pAriBASika AkaragaLaMte toVruva loVkoVpakArakavAda shAsatxrXkaqtigaLu heVraLavAgive. udAharaNege gajashAsatxrX, hayashAsatxrX, sUpashAsatxrX, shakunashAsatxrX, sAmudirxkashAsatxrX, shilapxshAsatxrX itAyxdi. AdudariMdaleV saMsakxqqtada AlaMkArikanAda rAjasheVKaranu kavigaLanunx kAvayxkavi, shAsatxrXkavi matutx uBayakavi eMdu mUru bagegaLAgi viMgaDisutAtxne. kAvayxveMbudu sArataH anuBavaveVdayxvAdare, shAsatxrXveMbudu budidhx\-gamayx. anuBava matutx AloVcanegaLu manuSayxna sahaja parxvaqtitxgaLu. aMteyeV veYdika dashaRnagaLa matutx jeYna hAgU bwdadhx dashaRnagaLa saMbaMdhadalilx BAratiVya tatatxvXdashaRnada aneVka padakoVshagaLu racitavAgive.
 
 \medskip
 
-BAratadalilx parxdhAnadhAreya paMtha athavA dashaRnagaLige saMbaMdhisidaMte rUpugoMDiruva garxMthagaLige hoVlisidare \hbox{aparxdhAna} dashaRna athavA paMthagaLa bagege dorakuva mAhiti apUNaRvAdudu. BAratadalilx sheYva, veYSaNxva, jeYna, bwdadhx, cAvARka hiVge halavAru paMthagaLu beLavaNige kaMDive. I parxdhAna matapaMthagaLalUlx adaralUlx sheYva matutx veYSaNxva paMthagaLalilx iruva halavu kavalu\-gaLa bagegx hecicxna mAhiti iMdigU laBayxvilalx. avugaLalilx muKayxvAda yAvudoV oMdu shAKe mAtarx  uLidukoMDu, marevina paridhige sariduhoVgive. udAharaNege, sheYvapaMthadalilx kApAlika, kALAmuKa, pAshupata muMtAdavugaLa bagege, avugaLa AcaraNe, naMbikegaLa bagege KacitavAgi dAKalisalu iMdU sAdhayxvAgutitxlalx. ititxVcegaMtU kApAlikara saMKeyx tiVra viraLa\-vAgi iruvudariMda avaru muKayxdhAreyanunx anusarisiyeV tamamx AcaraNegaLanunx mApaRDisikoMDiruvudariMda avara AcaraNegaLanunx hiVgeyeV eMdu kANisalu sAdhayxvAgutitxlalx. hAgeyeV veYSaNxvaru, shirxVveYSaNxvara naDuve iruva vayxtAyxsagaLU gamanAhaR. iMtaha aneVka saMgatigaLanunx sUkaSxmXvAgi gamanisabeVkAdudu agatayx. AdudariMdaleV ``\textbf{BArata oMdu dhAmiRka hAgU sAmAjika vayxvasethxya parxyoVgAlaya}'' eMbudariMda iMtaha vishiSaTx paMthagaLa niGaMTugaLa racaneya avashayxkateyanunx managANa\-bahudAgide. 
+BAratadalilx parxdhAnadhAreya paMtha athavA dashaRnagaLige saMbaMdhisidaMte rUpugoMDiruva garxMthagaLige hoVlisidare \hbox{aparxdhAna} dashaRna athavA paMthagaLa bagege dorakuva mAhiti apUNaRvAdudu. BAratadalilx sheYva, veYSaNxva, jeYna, bwdadhx, cAvARka hiVge halavAru paMthagaLu beLavaNige kaMDive. I parxdhAna matapaMthagaLalilx adaralUlx sheYva matutx veYSaNxva paMthagaLalilx, iruva halavu kavalu\-gaLa bagegx hecicxna mAhiti iMdigU laBayxvilalx. avugaLalilx muKayxvAda yAvudoV oMdu shAKe mAtarx  uLidukoMDu, uLiduvu marevina paridhige sariduhoVgive. udAharaNege, sheYvapaMthadalilx kApAlika, kALAmuKa, pAshupata muMtAdavugaLa bagege, avugaLa AcaraNe, naMbikegaLa bagege KacitavAgi dAKalisalu iMdU sAdhayxvAgutitxlalx. ititxVcegaMtU kApAlikara saMKeyx tiVra viraLa\-vAgi iruvudariMda avaru muKayxdhAreya parxBAvadiMdAgi tamamx AcaraNegaLanunx mApaRDisikoMDiruvudariMda avara mUla AcaraNegaLanunx hiVgeyeV eMdu kANisalu sAdhayxvAgutitxlalx. hAgeyeV veYSaNxvaru, shirxVveYSaNxvara naDuve iruva vayxtAyxsagaLU gamanAhaR. iMtaha aneVka saMgatigaLanunx sUkaSxmXvAgi gamanisabeVkAdudu oMdu sAMsakxqqtika agatayx. ``\textbf{BArata oMdu dhAmiRka hAgU sAmAjika vayxvasethxya parxyoVgAlaya}'' eMba hinenxleyalilx iMtaha vishiSaTx paMthagaLa niGaMTugaLa racaneya avashayxkateyanunx managANa\-bahudu. 
 
 \medskip
 
-vijAcnxnada beLavaNige visAtxragoLuLxtitxdadxMte kale, saMsakxqqti, dhamaRgaLa bagegina jAcnxna cikitasxkashakitxyanunx kaLedukoMDu janaru keVvala anukaraNeyalilx toDagidAdxre. jotege saMsakxqqtiya bagegina tiLivaLike dineVdineV siVmitagoLuLxtitxde. vijAcnxnavu koDutitxruva BwtajAcnxna keVvala BwtikajiVvigaLanAnxgisutitxde. iMtaha saMdaBaRdalilx pAriBASika padakoVshagaLa racane matutx adhayxyana bahaLa muKayxvAda sAMsakxqqtika saMgatiyAgutatxde.
+vijAcnxnada beLavaNige visAtxragoLuLxtitxdadxMte kale, saMsakxqqti, dhamaRgaLa bagegina jAcnxna cikitasxkashakitxyanunx kaLedukoMDu janaru keVvala anukaraNeyalilx toDagidAdxre. jotege saMsakxqqtiya bagegina tiLivaLike dineVdineV siVmitagoLuLxtitxde. vijAcnxnavu niVDutitxruva BwtajAcnxna janaranunx keVvala BwtikajiVvigaLanAnxgisutitxde. iMtaha saMdaBaRdalilx pAriBASika padakoVshagaLa racane matutx adhayxyana bahaLa muKayxvAda sAMsakxqqtika saMgatiyAgutatxde.
 
 \eject
 
-BAratada bahumuKi saMsakxqqtiya aneVka majalugaLanunx talasapxshiRyAgi iMdu adhayxyana mADabeVkAgide. ililxya saMsakxqqtiya veYvidhayx matutx koDukoLuLxvikegaLanunx parishiVlisabeVkAgide. Adare BArata vasAhaturASaTxrXvAda meVle, pAshAcxtayx jAcnxnashAKegaLa nera\-vina ililxya saMsakxqqtiyanunx saraLa Akaqtiyalilx atheYRsalAgutitxde. idakekx badalAgi idanunx iDiyAgi oMdu tAtitxvXka neleyalilx noVDuva agatayxvide. udAharaNege BAratadalilx aneVka jAti-upajAti, paMgaDa-upapaMgaDagaLive. avugaLa naDuvaNa veYvidhayx\-vanunx vasutxniSaThxvAgi dAKalisi adhayxyanakekx oLapaDisabeVkAgide. I daqSiTxyiMda BAratada jAti-mata-paMtha-vaqtitx-kulagaLanunx visatxqqta adhayxyanakekx oLapaDisi avugaLa tAtitxvXka pariBASeyanunx dAKalisabeVkAdudu sAMsakxqqtika agatayx. idu AgadehoVdare AyA \hbox{viBAgada} jAcnxnashAKegaLa amUlayx pariBASegaLu mareyAgi hoVguva apAyavide. udAharaNege kaqSige saMbaMdhisidaMte mUla savxrUpa iMdu aLivinaMcige baMdu talupide. aneVka kaqSi sAdhanagaLeV heVLahesarilalx\-vAgive. I daqSiTxyiMda elAlx sAMparxdAyika jAcnxnashAKegaLa vivaragaLanUnx saMkalisuvudu agatayx. 
+BAratada bahumuKi saMsakxqqtiya aneVka majalugaLanunx talasapxshiRyAgi iMdu adhayxyana mADabeVkAgide. ililxya saMsakxqqtiya veYvidhayx matutx koDukoLuLxvikegaLanunx parishiVlisabeVkAgide. Adare BArata vasAhaturASaTxrXvAda meVle, pAshAcxtayx jAcnxnashAKegaLa nera\-viniMda ililxya saMsakxqqtiyanunx saraLa reVKAtamxkavAgi atheYRsalAgutitxde. idakekx badalAgi idanunx iDiyAgi oMdu tAtitxvXka neleyalilx noVDuva agatayxvide. udAharaNege BAratadalilx aneVka jAti-upajAti, paMgaDa-upapaMgaDagaLive. avugaLa naDuvaNa veYvidhayx\-vanunx visatxqqta adhayxyanakekx oLapaDisi vasutxniSaThxvAgi dAKalisi adhayxyanakekx oLapaDisabeVkAgide. idu AgadehoVdare AyA \hbox{viBAgada} jAcnxnashAKegaLa amUlayx pariBASegaLu mareyAgihoVguva apAyavide. udAharaNege kaqSige saMbaMdhisida mUla savxrUpa iMdu aLivinaMcige baMdu talupide. aneVka kaqSi upakaraNagaLeV heVLahesarilalx\-vAgive. I daqSiTxyiMda elAlx sAMparxdAyika jAcnxnashAKegaLa vivaragaLanUnx saMkalisuvudu agatayx. 
 
 \medskip
 
@@ -35,15 +35,15 @@ I hinenxleyalilx BAratada oMdu parxmuKa dhamaRvAda viVrasheYva-liMgAyatada tAtit
 
 \medskip
 
-vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943ralilx shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgati\-gaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare basava samitiya \textbf{viVrasheYva pAriBASika padakoVsha} hAgU eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTagaLanunx DA. esf. vidAyxshaMkararavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa \hbox{viVrasheYva} kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx mAtarx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya viVrasheYva pAriBASika padakoVsha garxMthavanunx DA. eM. shivakumArasAvxmi, DA. si. shiva\-kumArasAvxmi hAgU DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
+vacanapitAmaha Pa.gu. haLakaTiTxyavaru \textbf{1943ralilx shivAnuBava shabadxkoVsha}da mUlaka viVrasheYva pAriBASika saMgati\-gaLanunx vivarisuva kelasavanunx pArxraMBisidaru. anaMtaradalilx kANisikoMDa mahatavxda viVrasheYva pAriBASika padakoVshaveMdare basava samitiya \textbf{viVrasheYva pAriBASika padakoVsha} hAgU porx. eM.eM. kalabugiRyavara parxdhAna saMpAdakatavx\-dalilx, kananxDa matutx saMsakxqqti ilAKeyu parxkaTisida samagarx vacana saMpuTagaLa koneya saMpuTavAda \textbf{vacana pariBASA\-koVsha}. I saMpuTavanunx DA. enf.\,ji. mahadeVvapapxnavaru saMpAdisidAdxre. basava samitiya viVrasheYva pAriBASika padakoVshavu vacana hAgU kananxDa \hbox{viVrasheYva} kAvayxgaLanunx oLagoMDu racitavAgidadxre, vacana pariBASAkoVshadalilx keVvala vacanasaMbaMdhi pAriBASika padagaLanunx dAKalisalAgide. I madheyx DA. jayashirxV daMDeyavaru \textbf{beDagina vacana pariBASA koVsha}vanunx racisidAdxre. jeesfesf garxMthamAleyiMda saMsakxqqta BASeya \textbf{viVrasheYva pAriBASika padakoVsha} vanunx DA. eM. shivakumArasAvxmi, DA. si. shiva\-kumArasAvxmi, DA. parxBusAvxmi, vidAvxnf DA. parxBuliMga hebAbxrf, vidAvxnf ecf.vi. nAgarAjarAvf, porx. Ti.Arf.\break mahadeVvayayx, vidAvxnf ke.si. gurumalalxdeVvaru, shirxVmati esf. gwri ivarugaLu saMpAdi\-sidAdxre. I elalx niGaMTugaLu oMdoMdu shAKeya pariBASeyanunx mAtarx dAKalisidudxvu. hiVgAgi samagarxvU visatxqqtavU Ada oMdu viVrasheYva pAriBASika niGaMTina avashayxkate idedxV itutx. idanunx pUreYsuva niTiTxnalilx Igina \textbf{viVrasheYva - liMgAyata pAriBASika padagaLanunx oLagoMDa shivapada ratanxkoVsha} niGaMTu rUpisalu ciMtisalAyitu.
 
 \medskip
 
-I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVshaH} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx \textbf{jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmi}gaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda DA. ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, porx. jayatiVthARcArayx maLagiyavaru Agamisidadxru. kaqti biDugaDeyAgutitxdadx A saMdaBaRdalilx saBeyalilx upasithxtaridadx DA. esf.eM. vaqSaBeVMdarx\-sAvxmi, porx. ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU taraleVbeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida DA. ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I mAtige danigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDale tamamx mAtinaMte, anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
+I \textbf{shivapada ratanxkoVsha} niGaMTu rUpugoMDadedxV oMdu itihAsa. jeesfesf garxMthamAleyiMda parxkaTavAda \textbf{\hbox{viVrasheYva} pAriBASika padakoVsha} saMsakxqqta garxMthada loVkApaRNe kAyaRkarxmavu paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahA\-sAvxmigaLavara divayx sAninxdhayxdalilx, pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavara samumxKadalilx beMgaLUrina jayanagarada jeesfesf saBAMgaNadalilx 2011ralilx neraveVritu. aMdina kananxDa matutx saMsakxqqti sacivarAda shirxV goVviMda \hbox{kArajoVLa}, hiriya vidAvxMsarAda DA. ji. veMkaTasubabxyayxnavaru, porx. malelxVpuraM ji. veMkaTeVshf, porx. jayatiVthARcArayx maLagiyavaru saBege Agamisidadxru. kaqti biDugaDeyAda saMdaBaRdalilx saBeyalilx upasithxtaridadx DA. esf.eM. vaqSaBeVMdarx\-sAvxmi, porx. ji.esf. sidadhx\-liMgayayx modalAda vidAvxMsaru I mahatavxda garxMthavanunx kananxDadalilxyU tarabeVkeMdu otAtxyisidaru. garxMthavanunx loVkApaRNe mADida DA. ji. veMkaTasubabxyayxnavaru \hbox{vidAvxMsara} I manavige danigUDisidaru. saciva shirxV goVviMda kArajoVLaravaru I saMsakxqqta garxMthavanunx kananxDakekx anuvAdisalu kananxDa matutx saMsakxqqti ilAKeyiMda anudAna niVDuvudAgi sathxLadalilxyeV GoVSi\-sidaru. idu avara saMsakxqqtiya bagegina pirxVtiyanunx toVrisutatxde. samAraMBa mugida kelaveV dinagaLalilx sakARrakekx parxsAtxvane salilxsida kUDaleV avaru tamamx mAtinaMte anudAnavanunx maMjUru mADidaru. I porxVtAsxhada PalavAgi saMsakxqqta pAriBASika padakoVsha garxMthavanunx kananxDakekx anuvAdisalu pArxraMBisalAyitu.
 
 \medskip
 
-I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa \hbox{viVrasheYva} shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV esf. shivaNaNx, DA. enf.ji. mAhadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
+I viSayavanunx baLika paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru, vijayapurada jAcnxna\-yoVgAsharxmada pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLoMdige  pArxsaMgikavAgi parxsAtxvisidAga avaru saMsakxqqta hAgU kananxDa \hbox{viVrasheYva} shAsatxrX garxMthagaLu, kAvayxgaLu hAgU vacanagaLanenxlAlx oLagoMDaMte samagarx pAriBASika padakoVsha racaneyAgabeVkAdudu agatayxveMdu  aBipArxyapaTaTxru. I viSayavanunx visatxqqtavAgi caciRsuva saluvAgi pUjayx sidedhxVshavxra mahAsAvxmigaLavaru sutUtxru shirxVkeSxVtarxkekx 2013ralilx Agamisida saMdaBaRdalilx niGaMTu pariNatara saBeyanunx EpaRDisalAgitutx. A saBeyalilx imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, porx. esf. naMjuMDayayx, shirxV enf. \hbox{basavArAdhayx}, DA. Ti.vi. veMkaTAcala shAsitxrXV, porx. ji.esf. sidadhxliMgayayx, DA. go.ru. cananxbasapapx, DA. esf. vidAyxshaMkara, DA. enf.esf. tArAnAtha, DA. Ti.Arf. mahadeVvayayx, shirxV esf. shivaNaNx, DA. enf.ji. mAhadeVvapapx, Da. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, shirxV Arf.esf. pUNARnaMda muMtAdavaru BAgavahisidadxru.
 
 \medskip
 
@@ -51,25 +51,27 @@ hiVge visAtxravAda caceR naDeda baLika niGaMTuvina pArxthamika kAyaR AraMBagoMDi
 
 \medskip
 
-kananxDada Ayekxya viSaya caceRge baMdAga halavu toDakugaLu edurAdavu. adaralilx I modaleV racitavAgidadx vacanagaLa pAriBASika padakoVshagaLiMda shabadxsaMgarxhakekx saMbaMdhisida toDaku kUDa oMdu. haLakaTiTxyavara shivAnuBavashabadxkoVsha, vacana pariBASA\-koVsha, basava samitiya viVrasheYva pAriBASika padakoVsha, DA. jayashirxV daMDeyavara beDagina vacana pariBASA koVsha itAyxdi aneVka niGaMTugaLu kananxDadalilx racanegoMDidadxvu. parxsutxta niGaMTu racaneya saMdaBaRdalilx ivugaLa parAmashaRna kAyaR anivAyaRvAgitutx. Adare I garxMthagaLiMda neVravAgi eravalu paDeyuva badalu, vacana saMpuTagaLanunx vidAvxMsariMda twlanika\-vAgi parishiVlisi hosa padagaLanunx saMgarxhisi paDeyalu nidhaRrisalAyitu. adaraMte 14 jana vidAvxMsarige vacana saMpuTagaLanunx niVDi padasaMgarxhada kAyaRvanunx vahisalAyitu.
+kananxDada Ayekxya viSaya caceRge baMdAga halavu toDakugaLu edurAdavu. adaralilx I modaleV racitavAgidadx vacanagaLa pAriBASika padakoVshagaLiMda shabadxsaMgarxhakekx saMbaMdhisida toDaku kUDa oMdu. haLakaTiTxyavara shivAnuBavashabadxkoVsha, vacana pariBASA\-koVsha, basava samitiya viVrasheYva pAriBASika padakoVsha, DA. jayashirxV daMDeyavara beDagina vacana pariBASA koVsha itAyxdi aneVka niGaMTugaLu kananxDadalilx IgAgaleV racanegoMDidadxvu. parxsutxta niGaMTu racaneya saMdaBaRdalilx ivugaLa parAmashaRna kAyaR anivAyaRvAgitutx. Adare I garxMthagaLiMda neVravAgi eravalu paDeyuva badalu, vacana saMpuTagaLanunx vidAvxMsariMda twlanika\-vAgi parishiVlisi hosa padagaLanunx saMgarxhisi paDeyalu nidhaRrisalAyitu. adaraMte 14 jana vidAvxMsarige vacana saMpuTagaLanunx niVDi padasaMgarxhada kAyaRvanunx vahisalAyitu.
 
 \medskip
 
-niGaMTuvina kAyaRda matotxMdu visatxraNeyAgi kananxDa viVrasheYva kAvayxgaLiMda padasaMgarxhada kelasa naDeyitu. basava \hbox{samitiya} viVrasheYva pAriBASika padakoVshadalilx vacanagaLu hAgU kananxDa viVrasheYva kAvayxgaLiMda ulelxVKagaLu matutx parxyoVga\-gaLanunx avara opipxge paDedu baLasikoLaLxlAyitu. Adare kaqtiya samagarxteya daqSiTxyiMda ininxtara garxMthagaLanunx saha parishiVlisuvudu agatayxveMdu vidAvxMsaru tiVmARnisidaru. hariharaniMda modalugoMDu SaDakaSxraviVranavarege sumAru 250kUkx hecucx viVrasheYva kavigaLa paTiTxyanunx sidadhxpaDisalAyitu. 
+niGaMTuvina kAyaRda matotxMdu visatxraNeyAgi kananxDa viVrasheYva kAvayxgaLiMda padasaMgarxhada kelasa naDeyitu. basava \hbox{samitiya} viVrasheYva pAriBASika padakoVshadalilx vacanagaLu hAgU kananxDa viVrasheYva kAvayxgaLiMda ulelxVKagaLu matutx parxyoVga\-gaLanunx avara opipxge paDedu baLasikoLaLxlAyitu. Adare kaqtiya samagarxteya daqSiTxyiMda ininxtara garxMthagaLanUnx saha parishiVlisuvudu agatayxveMdu tiVmARnavAyitu. hariharaniMda modalugoMDu SaDakaSxradeVvanavarege sumAru 250kUkx hecucx viVrasheYva kavigaLa paTiTxyanunx sidadhxpaDisalAyitu. 
 
 \medskip
 
-I paTiTxganuguNavAgi viVrasheYva kAvayxgaLanunx saMgarxhisuvudu savAlina kelasavAgitutx. elalx kavigaLa kaqtigaLu oMdeV kaDe laBayxvAgutitxralilalx. A kAraNadiMda meYsUru vishavxvidAyxnilayavU seVridaMte rAjayxda aneVka kaDegaLalilx aneVka tiMgaLugaLa kAla I garxMthagaLanunx huDuki, saMgarxhisi agatayxbidadx kaDegaLalilx avugaLa nakalugaLanunx tayArisi oMdoMdu parxtiyanunx vidAvxMsarige niVDa\-lAyitu. I padagaLanunx saMgarxhisalu padapaTiTxke namUneyanunx tayArisalAgitutx. adaralilx kAvayxda hesaru, kaviya hesaru, parxkaTavAda vaSaR, pAriBASika pada, adara parxyoVga, puTa saMKeyx, saMdhi/adhAyxya, pada saMKeyx hiVge elalx vivaragaLanUnx alilx namUdisabeVkeMdu sUcisalAyitu.
+I paTiTxganuguNavAgi viVrasheYva kAvayxgaLanunx saMgarxhisuvudu savAlina kelasavAgitutx. elalx kavigaLa kaqtigaLu oMdeV kaDe laBayxvAgutitxralilalx. A kAraNadiMda meYsUru vishavxvidAyxnilayavU seVridaMte rAjayxda aneVka kaDegaLalilx aneVka tiMgaLugaLa kAla I garxMthagaLanunx huDuki, saMgarxhisi agatayxbidadx kaDegaLalilx avugaLa nakalugaLanunx tayArisi oMdoMdu parxtiyanunx vidAvxMsarige niVDa\-lAyitu. I padagaLanunx saMgarxhisalu padapaTiTxke namUneyanunx sidadhxpaDisalAgitutx. adaralilx kAvayxda hesaru, kaviya hesaru, parxkaTavAda vaSaR, pAriBASika pada, parxyoVga, puTa saMKeyx, saMdhi/adhAyxya, pada saMKeyx muMtAda elalx vivaragaLanUnx namUdisabeVkeMdu sUcisalAyitu.
 
 \medskip
 
-I padasaMgarxhakAyaR mugiyalu aneVka tiMgaLugaLeV hiDidavu. aneVka jana vidAvxMsaru avara kAyaRbAhuLayxda naDuve kUDa biDuvu mADikoMDu I kAyaRvanunx mADikoTaTxru. rAshi rAshi padapaTiTxkegaLu sidadhxvAgi baMdavu. avugaLa saMKeyxyeV sumAru oMdu lakaSxdaSiTxtutx. Aga padapaTiTxkegaLanunx vacanagaLu hAgU kAvayxgaLeMdu eraDu BAgagaLAgi mADikoLaLxlAyitu. \hbox{anaMtara} vacana hAgU kAvayxgaLa padapaTiTxkegaLanunx akArAdiyAgi viMgaDisikoLaLxlAyitu. akArAdiyalilx hiVge punarA\-vataRnegoMDa hecicxna padagaLanunx keYbiDalAyitu. hiVge keYbiDuvAga, oMdu parxdhAna ulelxVKada pada beVre beVre athaRcACxye hoMdidadxre avugaLanunx uLisikoLaLxlAyitu. hAge uLida padagaLa saMKeyxyeV sumAru hatutx sAviradaSATxgitutx. ivugaLanunx oMdu muKayx ulelxVKapadada aDiyalilx, Binanx athaRcACxyeyiruva udadhxqqta vAkayxgaLanunx niVDi, avugaLige beVre saMKeyx niVDi, athaRvanunx dAKalisalAyitu.
+I padasaMgarxhakAyaR mugiyalu aneVka tiMgaLugaLeV hiDidavu. aneVka jana vidAvxMsaru avara kAyaRbAhuLayxda naDuve kUDa biDuvu mADikoMDu I kAyaRvanunx mADikoTaTxru. rAshi rAshi padapaTiTxkegaLu sidadhxvAgi baMdavu. avugaLa saMKeyxyeV sumAru oMdu lakaSxdaSiTxtutx. Aga padapaTiTxkegaLanunx vacanagaLu hAgU kAvayxgaLeMdu eraDu BAgagaLAgi mADikoLaLxlA\-yitu. \hbox{anaMtara} vacana hAgU kAvayxgaLa padapaTiTxkegaLanunx akArAdiyAgi viMgaDisalAyitu. akArAdiyalilx hiVge punarA\-vataRnegoMDa padagaLanunx keYbiDalAyitu. hiVge keYbiDuvAga, oMdu parxdhAna ulelxVKada pada beVre beVre athaRcACxye hoMdidadxre avugaLanunx uLisikoLaLxlAyitu. hAge uLida padagaLa saMKeyxyeV sumAru hatutx sAviradaSATxgitutx. ivugaLanunx oMdu muKayx ulelxVKapadada aDiyalilx, Binanx athaRcACxyeyiruva udadhxqqta vAkayxgaLanunx niVDi, avugaLige beVre saMKeyx niVDi, athaRvanunx dAKalisalAyitu.
 
 \medskip
 
-padapaTiTxkeyanunx niVDi padasaMgarxha mADalu koVridAga adaralilx AyekxgoMDa pada, kirxyApadaveV nAmapadaveV eMbudanunx tiLisabeVkeMdAgitutx. Adare saMpAdaneya samayadalilx I saMgatiyanunx keYbiTuTx parxkaqtirUda padavanunx, samAsarUpada\-vanunx uLisikoLaLxlAyitu.  sAmAnayxvAgi samAsapadagaLalilx gariSaThx mUru padagaLanunx oLagoMDiruva samAsapadagaLanunx uLisikoLuLxvudeMdu tiVmARnisalAyitu. pAriBASika a-samasatx padagaLanunx uLisikoMDu, anubaMdhadalilx koDuvudeMdu tiVmARnisa\-lAyitu. udAharaNege \textbf{aMga} enunxva mUla pAriBASika padakekx \textbf{aMgada BaMga, aMgada beLagu} hiVge. aMteyeV parxti padakekx doreta parxyoVgagaLu keVvala vacanagaLiMda, kAvayxgaLiMda, saMsakxqqtadiMda doretideyeV eMbudanunx ulelxVKa padada pakakxdalilx sUcisa\-beVku. oMdu pakaSx ivugaLalilx  kaniSaThx eraDu aMdare kAvayx matutx vacana; vacana matutx saMsakxqqta; saMsakxqqta matutx kananxDa kAvayx hiVge 2 athavA 3 viBAgagaLiMda parxyoVgagaLu doretare kaMsadalilx avugaLa AkarasaMjecnxyanunx dAKalisadiralu tiVmARnisalAyitu. 
+padapaTiTxkeyanunx niVDi padasaMgarxha mADalu koVridAga adaralilx AyekxyAda pada kirxyApadave nAmapadave eMbudanunx tiLisabeVkeMdAgitutx. Adare, saMpAdaneya samayadalilx I saMgatiyanunx keYbiTuTx parxkaqtirUpa padavanunx, samAsarUpa\-vanunx uLisikoLaLxlAyitu.  iMtha samAsapadagaLalilx gariSaThx mUru padagaLanunx oLagoMDiruva padagaLanunx mAtarx uLisikoLuLxvudeMdu nidhaRrisalAyitu. a-samasatx pAriBASika padagaLanunx uLisikoMDu parxteyxVkavAgi anubaMdhadalilx koDuvudeMdu tiVmARnisa\-lAyitu. udAharaNege \textbf{aMga} enunxva mUla pAriBASika padakekx \textbf{aMgada BaMga, aMgada beLagu} hiVge. aMteyeV parxti\-yoMdu padakUkx doreta parxyoVgagaLu keVvala vacanagaLiMda, kAvayxgaLiMda, saMsakxqqtadiMda doretideyeV eMbudanunx ulelxVKapadada pakakxdalilx sUcisa\-beVku. oMdu pakaSx ivugaLalilx  kaniSaThx eraDu aMdare kAvayx matutx vacana; vacana matutx saMsakxqqta; saMsakxqqta matutx kananxDa kAvayx hiVge 2 athavA 3 viBAgagaLiMda parxyoVgagaLu doretare avugaLa AkarasaMjecnxyanunx kaMsadalilx dAKalisadiralu tiVmARnisalAyitu. 
 
 \newpage
+
+%raghu, page13
 
 I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi aMtimavAgi pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru hAgU avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx sidadhxpaDisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
 
