--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -24,19 +24,19 @@
 
 \bigskip
 
-jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata\,-\,paMthagaLive. avugaLa naDuve aneVka sAmayx veYshiSaTxtegaLu hAgu BinanxtegaLu ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. 
+jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata\,-\,paMthagaLive. avugaLa naDuve aneVka sAmayx veYshiSaTxyXgaLu hAgu BinanxtegaLu ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. 
 
 \medskip
 
-``puNayxpApaMgaLeMbavu tamamx iSaTx kaMDire'' `ayAyx' eMdaDe savxgaR, `elavo'  eMdaDe naraka. deVvA, BakAtx, jayA, jiV[yA] eMba nuDiyoLage keYlAsaveYduvude kUDalasaMgamadeVvA.'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka mata\-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi\break noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+``puNayxpApaMgaLeMbavu tamamx iSaTx kaMDire'', `ayAyx' eMdaDe savxgaR, `elavo'  eMdaDe naraka. ``deVvA, BakAtx, jayA, jiV[yA] eMba nuDiyoLage keYlAsaveYduvude kUDalasaMgamadeVvA''. idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka mata\-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAna rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi\break noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
 
 \medskip
 
-parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNayx vayxvasethx hAgU naMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
+parxtiyoMdu kulamata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNaR vayxvasethx naMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
 
 \medskip
 
-pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx anuvAdisuva udedxVsha I yoVjaneyalilxtutx, anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx taLedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedhxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe, sUcanegaLanunx niVDidAdxre.
+pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx anuvAdisuva udedxVsha I yoVjaneyalilxtutx. anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx taLedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedhxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe, sUcanegaLanunx niVDidAdxre.
 
 \medskip
 
